Edit tox to include bst

--- a/tox.ini
+++ b/tox.ini
@@ -2,7 +2,9 @@
 envlist = py27, py35
 
 [testenv]
-commands = py.test -v src/test_graph.py
+commands =
+        py.test -v src/test_graph.py
+        py.test -v src/test_bst.py
 deps =
     pytest
     pytest-xdist
