configured to for merge sort

--- a/tox.ini
+++ b/tox.ini
@@ -5,6 +5,7 @@ envlist = py27, py35
 commands =
     py.test -v src/test_graph.py
     py.test -v src/test_insertion_sort.py
+    py.test -v src/test_merge_sort.py
 deps =
     pytest
     pytest-xdist
