quick sort with tox/tests/main block

--- a/tox.ini
+++ b/tox.ini
@@ -6,6 +6,7 @@ commands =
     py.test -v src/test_graph.py
     py.test -v src/test_insertion_sort.py
     py.test -v src/test_merge_sort.py
+    py.test -v src/test_quick_sort.py
 deps =
     pytest
     pytest-xdist
