radix sort with passing tests in tox.

--- a/tox.ini
+++ b/tox.ini
@@ -3,12 +3,10 @@ envlist = py27, py35
 
 [testenv]
 commands =
-    py.test -v src/test_graph.py
     py.test -v src/test_insertion_sort.py
-    py.test -v src/test_bst.py
     py.test -v src/test_merge_sort.py
     py.test -v src/test_quick_sort.py
-    py.test -v src/test_bst.py
+    py.test -v src/test_radix_sort.py
 deps =
     pytest
     pytest-xdist
